<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyPhoneActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/mutual_bg_waves">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Verifying ..."
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile"
            android:text="+256770000000"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="4dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textColorHint="@color/colorAccent"
                android:text="@string/code_hint_txt"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight" />

            <EditText
                android:id="@+id/editTextCode"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:digits="0123456789"
                android:drawablePadding="10dp"
                android:hint="@string/verify_hint"
                android:inputType="phone"
                android:maxLength="6"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/red_bottom"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                android:background="@drawable/translusent_bottom">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="Resend SMS"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:textAlignment="textStart"
                    android:id="@+id/btn_resend_sms"
                    android:textColor="@color/colorGrey"
                    android:drawableStart="@drawable/msg_status_gray_msg_waiting"
                    android:drawablePadding="10dp"
                    android:background="@color/transparent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="1:09"
                    android:id="@+id/timer"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"/>
            </LinearLayout>

            <Button
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:id="@+id/buttonSignIn"
                android:layout_marginTop="30dp"
                android:text="@string/complete_setup"
                android:background="@drawable/btn_mutual"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>